update home page background, add a scripting overview

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
 	</head>
 
 	<body style = "padding:0; margin:0; font-family:system-ui,Arial,sans-serif;">
+		
+<!--		
+	<video autoplay muted loop style = "min-width:100%;min-height:100%;position:fixed; bottom:0;right:0; z-index:-1;">
+		<source src = "https://thumbs.gfycat.com/AnchoredSoulfulCapeghostfrog-mobile.mp4">
+	</video>
+-->			
+	<video autoplay muted loop style = "min-width:100%;min-height:100%;position:fixed; bottom:0;right:0; z-index:-1; filter:invert(100%);">
+		<!-- <source src = "https://thumbs.gfycat.com/AnchoredSoulfulCapeghostfrog-mobile.mp4"> -->
+		<source src = "https://thumbs.gfycat.com/AdventurousNeatGrayreefshark-mobile.mp4"> 
+	</video>
+	
 		<div> <!-- page wrapper -->
 		
 			<div style = "height:10%; position:fixed;"> <!-- header wrapper -->
