--- a/404.html
+++ b/404.html
@@ -6,8 +6,13 @@
 	</head>
 
 	<body>
-		<h1 id="error-404">Error 404!</h1>
+		<div style="width:100%; height:50%; position:absolute; text-align:center; top:25%;left:0;">
+<h1>Error 404!</h1>
 <p>This page is lost :(</p>
+<hr />
+<h3><a href="/">Home</a></h3>
+<hr />
+</div>
 
 	</body>
 </html>
