add contact info and docs for mesh shader

--- a/index.html
+++ b/index.html
@@ -34,19 +34,14 @@
 	<video autoplay muted loop style = "min-width:100%;min-height:100%;position:fixed; bottom:0;right:0; z-index:-1;">
 		<source src = "https://thumbs.gfycat.com/AnchoredSoulfulCapeghostfrog-mobile.mp4">
 	</video>
--->			
-	<video autoplay muted loop style = "min-width:100%;min-height:100%;position:fixed; bottom:0;right:0; z-index:-1; filter:invert(100%);">
-		<!-- <source src = "https://thumbs.gfycat.com/AnchoredSoulfulCapeghostfrog-mobile.mp4"> -->
+-->
+	<video autoplay muted loop style = "min-width:100vw;min-height:100vh;position:fixed; bottom:0;right:0; z-index:-1; filter:invert(100%);">		
 		<source src = "https://thumbs.gfycat.com/AdventurousNeatGrayreefshark-mobile.mp4"> 
 	</video>
 	
-		<div> <!-- page wrapper -->
+		<div style = "margin-bottom:0;"> <!-- page wrapper -->
 		
-			<div style = "height:10%; position:fixed;"> <!-- header wrapper -->
-			
-			</div> <!-- header wrapper -->
-
-			<div> <!-- content wrapper -->
+			<div style = "height:100vh;"> <!-- content wrapper -->
 				
 				<div style = "padding:0; margin:0; text-align:center;">
 					<h1>Kye Cunningham</h1>
@@ -65,8 +60,13 @@
 								
 			</div> <!-- content wrapper -->
 
-			<div> <!-- footer wrapper -->
-			</div> <!-- footer wrapper -->
+			<div style = "background-color:#fff; margin:0;padding:0; position:absolute; left:0; top:100vh;width:100%;">
+				<h2>Contact Me</h2>
+				<hr>
+				<a href = "#"><h2>Email</h2></a>
+				<a href = "#"><h2>Github</h2></a>
+				<a href = "#"><h2>Linkedin</h2></a>
+			</div>
 
 		</div> <!-- page wrapper -->
 	</body>
