add book summaries

--- a/books/ash-remains.html
+++ b/books/ash-remains.html
@@ -3,22 +3,35 @@
 	<head>
 		<meta charset = "utf-8">
 		<title> Ash Remains </title>
+		
+		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
+		<link rel="stylesheet" href="/assets/styles/common.css">	
+		
+		<script src="/assets/scripts/theme.js"></script>
 	</head>
 
-	<body style = "background-color:#121212; color:#fff; font-family:Roboto,system-ui,Arial,sans-serif; font-weight:200;">
+	<body onload = "setTheme(getTheme());">
 		<div style = "width:80vw; margin:auto;">
 			<h1>Ash Remains</h1>
 			<hr>			
 		</div>
 	
-		<div style = "width:80vw; margin:auto;">			
-		<p>As a spy, I find the relationships I’ve made becoming all too real, and my beliefs being broken time and time again by people who are more human than I could’ve ever expected.</p>
 
-		<hr>
+		<!-- book image? -->
+		<div style = "width:80vw; margin:auto;">			
+		<p>The story of a spy, abandoned by their country and left deep behind enemy lines. With nothing left of their original identity, and having burned all letters from mission control, they find themself relying on the people they once sought to bring down.</p>
+
+<p>A compelling story where the lines between good and evil are far from clear.</p>
+
+<hr />
+
+<p>After being abandoned by my country and left deep behind enemy lines, I find the relationships I’ve made becoming all too real, and my beliefs being broken time and time again by people who are more human than I could’ve ever expected.</p>
+		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
-		Page 1
+		<hr>
+		<a href = "/pages/Ash Remains/1.html">Page 1</a>
 		</div>
 		
 	</body>
