--- a/books/cult.html
+++ b/books/cult.html
@@ -3,24 +3,34 @@
 	<head>
 		<meta charset = "utf-8">
 		<title> Cult </title>
+		
+		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
+		<link rel="stylesheet" href="/assets/styles/common.css">	
+		
+		<script src="/assets/scripts/theme.js"></script>
 	</head>
 
-	<body style = "background-color:#121212; color:#fff; font-family:Roboto,system-ui,Arial,sans-serif; font-weight:200;">
+	<body onload = "setTheme(getTheme());">
 		<div style = "width:80vw; margin:auto;">
 			<h1>Cult</h1>
 			<hr>			
 		</div>
 	
+
+		<!-- book image? -->
 		<div style = "width:80vw; margin:auto;">			
-		<p>As a child, I was always told to not question the book. It held the answers to every question, and was both my shield and sword against the wider world.</p>
+		<p>As a child, I was always told to not question the book. It held the answers to every question, and was both my sword and shield against the wider world.</p>
 
-<p>Our rituals might have seemed unusual to an outside spectator, and I had been warned that most wouldn’t take kindly to being invited into our group, but it had never really been an issue. The wider implications always seemed to escape me, replaced by an unending zealous belief in the book.</p>
+<p>When my questions started to build is when the trouble seemed to start. Attempting to escape the followers that I was once a part of, I leave town, trying to build up a new reputation in a neighbouring city.</p>
 
-		<hr>
+<hr />
+<p>A bitter story that follows the steps of Johann - a 23 year old herder who lives on the outskirts of <em>some rural town</em> - as he escapes, is found, and eventually abducted from his home by the people he once was a part of.</p>
+		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
-		Page 1
+		<hr>
+		<a href = "/pages/Cult/1.html">Page 1</a>
 		</div>
 		
 	</body>
