--- a/books/shellshock.html
+++ b/books/shellshock.html
@@ -3,22 +3,29 @@
 	<head>
 		<meta charset = "utf-8">
 		<title> Shellshock </title>
+		
+		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
+		<link rel="stylesheet" href="/assets/styles/common.css">	
+		
+		<script src="/assets/scripts/theme.js"></script>
 	</head>
 
-	<body style = "background-color:#121212; color:#fff; font-family:Roboto,system-ui,Arial,sans-serif; font-weight:200;">
+	<body onload = "setTheme(getTheme());">
 		<div style = "width:80vw; margin:auto;">
 			<h1>Shellshock</h1>
 			<hr>			
 		</div>
 	
-		<div style = "width:80vw; margin:auto;">			
-		<p>The war has been raging for years now. Each of our countries in a race to find the next weapon, and expose their enemies’ next weakness. With no end in sight, and soldiers falling like flies, I’m conscripted to fight at Glintrock, defending it against the creatures that aim to enslave us.</p>
 
-		<hr>
+		<!-- book image? -->
+		<div style = "width:80vw; margin:auto;">			
+		<p>The war has been raging for years now. Each of our countries in a race to find the next weapon, and expose their enemies’ next weakness. With no end in sight, and soldiers falling like flies, I’m conscripted to fight at Glintrock, defending it against the creatures that aim to enslave us. With nothing but my old hunting gear, will I be able to survive the ordeal, or become food for the creatures of the dark?</p>
+		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
-		Page 1
+		<hr>
+		<a href = "/pages/Shellshock/1.html">Page 1</a>
 		</div>
 		
 	</body>
