--- a/books/the-legendary-craftsman.html
+++ b/books/the-legendary-craftsman.html
@@ -3,22 +3,29 @@
 	<head>
 		<meta charset = "utf-8">
 		<title> The Legendary Craftsman </title>
+		
+		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
+		<link rel="stylesheet" href="/assets/styles/common.css">	
+		
+		<script src="/assets/scripts/theme.js"></script>
 	</head>
 
-	<body style = "background-color:#121212; color:#fff; font-family:Roboto,system-ui,Arial,sans-serif; font-weight:200;">
+	<body onload = "setTheme(getTheme());">
 		<div style = "width:80vw; margin:auto;">
 			<h1>The Legendary Craftsman</h1>
 			<hr>			
 		</div>
 	
+
+		<!-- book image? -->
 		<div style = "width:80vw; margin:auto;">			
 		<p>A dungeon running fanatic runs into a problem when the boss of a locked dungeon breaks his equipment. What does he do? Forge new ones!</p>
-
-		<hr>
+		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
-		Page 1
+		<hr>
+		<a href = "/pages/The Legendary Craftsman/1.html">Page 1</a>
 		</div>
 		
 	</body>
