--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	<video autoplay muted loop style = "min-width:100%;min-height:100%;position:fixed; bottom:0;right:0; z-index:-1;">
 		<source src = "https://thumbs.gfycat.com/AnchoredSoulfulCapeghostfrog-mobile.mp4">
 	</video>
-
+-->	
 	<video autoplay muted loop style = "min-width:100vw;min-height:100vh;position:fixed; bottom:0;right:0; z-index:-1;">		
 		<source src = "https://thumbs.gfycat.com/AdventurousNeatGrayreefshark-mobile.mp4"> 
 	</video>
--->	
+
 		<div style = "margin-bottom:0;"> <!-- page wrapper -->
 		
 			<div style = "height:100vh;"> <!-- content wrapper -->
@@ -33,7 +33,7 @@
 				</div>
 				
 				<!-- style selector -->
-				<div style = "position:absolute; top:1em; right:1em; width:50px; height:50px; border-radius:50%; background-color:currentColor; box-shadow: inset 0px 0px 25px #888;" onclick = "hackyToggleTheme();">				
+				<div style = "position:absolute; top:1em; right:1em; width:50px; height:50px; border-radius:50%;background-color: currentColor;" onclick = "hackyToggleTheme();">				
 				</div>
 				
 				<div class = "section">
