write pages for books and docs

--- a/404.html
+++ b/404.html
@@ -3,6 +3,13 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>  </title>
+		
+		<!-- styles -->				
+		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
+		<link rel="stylesheet" href="/assets/styles/common.css">		
+		<!-- scripts -->
+		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
+		
 	</head>
 
 	<body>
