--- a/books/kind of evil.html
+++ b/books/kind of evil.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title> Shellshock </title>
+		<title> Kind of evil </title>
 		
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">	
@@ -12,19 +12,19 @@
 
 	<body>
 		<div style = "width:80vw; margin:auto;">
-			<h1>Shellshock</h1>
+			<h1>Kind of evil</h1>
 			<hr>			
 		</div>
 	
 		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
-		<p>The war has been raging for years now. Each of our countries in a race to find the next weapon, and expose their enemies’ next weakness. With no end in sight, and soldiers falling like flies, I’m conscripted to fight at Glintrock, defending it against the creatures that aim to enslave us. With nothing but my old hunting gear, will I be able to survive the ordeal, or become food for the creatures of the dark?</p>
+		<p>When I learned about magic, I never thought I would be the one to use it. It always felt like a trick that the rich people had as opposed to any real sort of miracle. But as I sit here, with flames dancing at my fingertips in the dead of night, I realise just how wrong I was.</p>
 		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
 		<hr>
-		<a href = "/pages/shellshock/1.html">Read</a> 
+		<a href = "/pages/kind of evil/1.html">Read</a> 
 		</div>
 		
 	</body>
