--- a/pages/the legendary craftsman/1.html
+++ b/pages/the legendary craftsman/1.html
@@ -6,7 +6,7 @@
 		
 		<meta charset = "utf-8">
 		<!-- <title></title> -->
-		<title>Cult</title> 
+		<title>The legendary craftsman</title> 
 		<!-- styles -->				
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">		
@@ -19,9 +19,14 @@
 				
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">
 		
-		<h1> Cult</h1>
+		<h1> The legendary craftsman</h1>
 		<hr>
-			<p>this is the content of page 1</p>
+			<p>[Welcome to Nebula]</p>
+
+<p>[Select a species]</p>
+
+<hr />
+<p><a href="./stats_1.html">stats</a></p>
 
 		</div>
 		
