--- a/books/ash remains.html
+++ b/books/ash remains.html
@@ -2,22 +2,21 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title> Ash Remains </title>
+		<title> Ash remains </title>
 		
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">	
 		
-		<script src="/assets/scripts/theme.js"></script>
+		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 	</head>
 
-	<body onload = "setTheme(getTheme());">
+	<body>
 		<div style = "width:80vw; margin:auto;">
-			<h1>Ash Remains</h1>
+			<h1>Ash remains</h1>
 			<hr>			
 		</div>
 	
-
-		<!-- book image? -->
+		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
 		<p>The story of a spy, abandoned by their country and left deep behind enemy lines. With nothing left of their original identity, and having burned all letters from mission control, they find themself relying on the people they once sought to bring down.</p>
 
@@ -25,13 +24,13 @@
 
 <hr />
 
-<p>After being abandoned by my country and left deep behind enemy lines, I find the relationships I’ve made becoming all too real, and my beliefs being broken time and time again by people who are more human than I could’ve ever expected.</p>
+<p>After being abandoned by their country and left deep behind enemy lines, Ryan find the relationships he’s made becoming all too real, and his beliefs being broken time and time again by people who are more human than he could’ve ever expected.</p>
 		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
 		<hr>
-		<a href = "/pages/Ash Remains/1.html">Page 1</a>
+		<a href = "/pages/ash remains/1.html">Read</a> 
 		</div>
 		
 	</body>
