--- a/books/cult.html
+++ b/books/cult.html
@@ -7,17 +7,16 @@
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">	
 		
-		<script src="/assets/scripts/theme.js"></script>
+		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 	</head>
 
-	<body onload = "setTheme(getTheme());">
+	<body>
 		<div style = "width:80vw; margin:auto;">
 			<h1>Cult</h1>
 			<hr>			
 		</div>
 	
-
-		<!-- book image? -->
+		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
 		<p>As a child, I was always told to not question the book. It held the answers to every question, and was both my sword and shield against the wider world.</p>
 
@@ -30,7 +29,7 @@
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
 		<hr>
-		<a href = "/pages/Cult/1.html">Page 1</a>
+		<a href = "/pages/cult/1.html">Read</a> 
 		</div>
 		
 	</body>
