--- a/books/gory-glory.html
+++ b/books/gory-glory.html
@@ -2,30 +2,29 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title> The Legendary Craftsman </title>
+		<title> Gory Glory </title>
 		
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">	
 		
-		<script src="/assets/scripts/theme.js"></script>
+		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 	</head>
 
-	<body onload = "setTheme(getTheme());">
+	<body>
 		<div style = "width:80vw; margin:auto;">
-			<h1>The Legendary Craftsman</h1>
+			<h1>Gory Glory</h1>
 			<hr>			
 		</div>
 	
-
-		<!-- book image? -->
+		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
-		<p>A dungeon running fanatic runs into a problem when the boss of a locked dungeon breaks his equipment. What does he do? Forge new ones!</p>
+		<p>Who needs a beating?</p>
 		
 		</div>
 		
 		<div style = "width:80vw; margin:auto; text-align:right;">
 		<hr>
-		<a href = "/pages/The Legendary Craftsman/1.html">Page 1</a>
+		<a href = "/pages/gory glory/1.html">Read</a> 
 		</div>
 		
 	</body>
