--- a/pages/ash remains/1.html
+++ b/pages/ash remains/1.html
@@ -11,11 +11,11 @@
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">		
 		<!-- scripts -->
-		<script src="/assets/scripts/theme.js"></script>
+		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 		
 	</head>
 		
-	<body style = "margin:0; padding:0; overflow-x: hidden;" onload = "setTheme(getTheme());">
+	<body style = "margin:0; padding:0; overflow-x: hidden;">
 				
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">
 		
@@ -30,6 +30,11 @@
 Vlado Puta</p>
 
 		</div>
+		
+		
+		<div class = "theme-selector" onclick = "hackyToggleTheme();">
+			</div>
+		
 		
 		<div style = "width:70vw; margin:auto;">
 		<hr>	
