--- a/pages/shellshock/1.html
+++ b/pages/shellshock/1.html
@@ -11,21 +11,31 @@
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">		
 		<!-- scripts -->
-		<script src="/assets/scripts/theme.js"></script>
+		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 		
 	</head>
 		
-	<body style = "margin:0; padding:0; overflow-x: hidden;" onload = "setTheme(getTheme());">
+	<body style = "margin:0; padding:0; overflow-x: hidden;">
 				
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">
 		
 		<h1> Shellshock</h1>
 		<hr>
-			<p>WAAAAAARRR!!!!!!! My ears bleed from the sound, spells and artillery shells exploding around me. In my hands is a plasma rifle, capable of accelerating the very air into blisteringly high temperatures. I aim, freeze, and squeeze the trigger. Then everything goes white. A scorching ray of incandescent plasma arcs from the barrel, hot enough that the muddy ground underneath it starts to steam. The gun whines, releasing the compressed gases inside it as the dynamo within keeps turning. I’ve been told by some of the older veterans that this weapon is similar to some of the ancient tokamak machines - a primitive technology by any standard, but one that led us to where we are today. The beam collides with an undefended creature and doesn’t stop, the plasma boring a hole directly through the sternum before passing out the other side. Ducking down, I pull off my eyepiece, made to protect our vision against both the blistering heat and blinding light that the rifles emit. Instantly, the sky is lit up by return fire, arcing over my head and impacting against the darksteel wall of the fortress, exploding into a frenzy of sparks and static bolts that seem to dance along the wall, before dissapating, or being absorbed.</p>
+			<h3 id="blackwood"><strong>Blackwood</strong></h3>
+<p>It’s winter, and a frost has crept up over the leaves that I stand on - even deep within the forest, the bitter cold gives no ground. The occasional web glistens in the shadows, magnified to proportions that would dwarf the average man. This is Blackwood, a place abandoned by settlers, villagers, hunters and just about everyone else who exists. Except us.</p>
 
-<p>Hungry for blood, the horde keeps nearing, like an unstoppable flood.</p>
+<p>As we move forward, getting ever closer to our goal, small clouds of fog rise up with our breath, before crystallising and hanging in the air like smoke. The air here is heavy - both figuratively and literally, and our lungs strain against the environment to keep us breathing.</p>
+
+<p>Each one of us is armed, although not with steel - cumbersome and noisy are two things that even a starving hunter wouldn’t be. Three of us have short bows, sturdy and powerful enough to pierce through the skin of most creatures. We all have knives. I reach for my satchel, resting my hand on the outside wrapping, reassuring myself that the contents are still in one piece. Then I heard it. The slight rustle of fabric in an otherwise silent forest. Not from behind me, where the rest of my team is, but from ahead. Crouching down, I let my hand rest on the bound handle of my knife. My fingers twitch. <em>Breathe.</em> The cold fog rises once again in front of my face, and as I realise my mistake, a crushing pain pushes me into the ground, my eyes covered by the dense matted fur of whatever creature ambushed me. My arm is pinned to the ground, and I can feel my spine curve around the bow on my back. The dagger is still in my free hand, and I unsheathe, swinging upwards until my knife jerks to a halt, too blunt to slice through the fur of the creature.</p>
+
+<p>Only now do the arrows come flying over me, screaming through the air before they thud into the creature, making it recoil away in pain.</p>
 
 		</div>
+		
+		
+		<div class = "theme-selector" onclick = "hackyToggleTheme();">
+			</div>
+		
 		
 		<div style = "width:70vw; margin:auto;">
 		<hr>	
