update landing page and add pages for books

--- a/books/ash-remains.html
+++ b/books/ash-remains.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title> Ash remains </title>
+		<title> Ash Remains </title>
 		
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">	
@@ -12,7 +12,7 @@
 
 	<body>
 		<div style = "width:80vw; margin:auto;">
-			<h1>Ash remains</h1>
+			<h1>Ash Remains</h1>
 			<hr>			
 		</div>
 	
