--- a/books/kind-of-evil.html
+++ b/books/kind-of-evil.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title> Kind of evil </title>
+		<title> Kind Of Evil </title>
 		
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
 		<link rel="stylesheet" href="/assets/styles/common.css">	
@@ -12,13 +12,14 @@
 
 	<body>
 		<div style = "width:80vw; margin:auto;">
-			<h1>Kind of evil</h1>
+			<h1>Kind Of Evil</h1>
 			<hr>			
 		</div>
 	
 		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
 		<p>When I learned about magic, I never thought I would be the one to use it. It always felt like a trick that the rich people had as opposed to any real sort of miracle. But as I sit here, with flames dancing at my fingertips in the dead of night, I realise just how wrong I was.</p>
+
 		
 		</div>
 		
