--- a/pages/ash remains/1.html
+++ b/pages/ash remains/1.html
@@ -22,12 +22,27 @@
 		<h1> Ash remains</h1>
 		<hr>
 			<h1 id="chapter-1">Chapter 1</h1>
-<p>Honesty is the best policy, or so I’ve been told. Maybe that would be true, if I wasn’t a spy. Right now, I find myself talking to a diplomat who had previously arranged a meeting between me and his superior - Vlado Puta. With nuclear destruction creeping closer and closer to reality, it’s been my job for the past four years to collect and deliver intelligence to those at home.</p>
+<p>Honesty is the best policy, or so I’ve been told. Maybe that would be true, if I wasn’t a spy. Right now, I find myself talking to a diplomat who had previously arranged a meeting between me and his superior - General Herd. With nuclear destruction creeping closer and closer to reality, it’s been my job for the past four years to collect and deliver intelligence regarding military force and position of the Ruidian troops to those at home.</p>
+
+<h1 id="outline">Outline</h1>
+<p>introduce character &amp; setting</p>
+
+<p>follow character as they collect a piece of intel, send it, and wait for a response</p>
+
+<p>fast forward through many of these</p>
+
+<p>return to the character waiting for their next orders, which never come.</p>
+
+<p>focus on the uncertainty and lack of direction that they would probably feel.</p>
+
+<p>after they do manage to make contact with one of their old acquaintances from home, they realise their government said they were dead (code:thinks they’re a turncoat), so no longer has any contact with them.</p>
+
+<p>mc becomes frustrated at their government, and, on orders to not return home, they have to start fresh in enemy territory, for real - this time, without the protection of their government.</p>
+
+<p>a story like this really needs a defined set of locations, historical backdrop and solid timeline if i wanna get it right.</p>
 
 <hr />
 
-<p>placeholders: 
-Vlado Puta</p>
 
 		</div>
 		
@@ -42,5 +57,11 @@ Vlado Puta</p>
 		
 		<div style = "float:right; margin:0; padding:0; text-align:right; display:inline;"> <a href = "./2.html"> Page 2</a></div>		
 		</div>
+		
+		
+		<!-- footer -->
+		<div style = "height:60vh;">
+		</div>		
+		
 	</body>
 </html>
