--- a/pages/shellshock/1.html
+++ b/pages/shellshock/1.html
@@ -43,5 +43,11 @@
 		
 		<div style = "float:right; margin:0; padding:0; text-align:right; display:inline;"> <a href = "./2.html"> Page 2</a></div>		
 		</div>
+		
+		
+		<!-- footer -->
+		<div style = "height:60vh;">
+		</div>		
+		
 	</body>
 </html>
