add more themes, as well as a new notes category

--- a/settings.html
+++ b/settings.html
@@ -26,6 +26,8 @@
 
 
 
+	<div class = "theme-select" onclick ="setTheme( 'blossom' );"> - blossom </div>
+
 	<div class = "theme-select" onclick ="setTheme( 'code blue' );"> - code blue </div>
 
 	<div class = "theme-select" onclick ="setTheme( 'code red' );"> - code red </div>
@@ -33,6 +35,8 @@
 	<div class = "theme-select" onclick ="setTheme( 'dark' );"> - dark </div>
 
 	<div class = "theme-select" onclick ="setTheme( 'light' );"> - light </div>
+
+	<div class = "theme-select" onclick ="setTheme( 'lite' );"> - lite </div>
 
 <hr>
 
