deepen plot outline for books

--- a/notes/A Holistic Overview Of Starting A Business.html
+++ b/notes/A Holistic Overview Of Starting A Business.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title> A holistic overview of starting a buisness </title>
+		<title> A holistic overview of starting a business </title>
 		
 		<!-- styles -->				
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
@@ -13,15 +13,46 @@
 	</head>
 
 	<body>
-		<h1 id="buisness-and-market-analysis">Buisness and Market Analysis</h1>
+		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
+<h1 id="a-holistic-overview-of-starting-a-business">A Holistic Overview Of Starting A Business</h1>
 
 <p>Learning how to grow a successful business takes time. Networking, cultivating the image, and identifying opportunities are all crucial to success. Before starting a business of your own, there are a few things you should do first, to help estimate the potential success of your endeavour.</p>
+
+<h1 id="business-and-market-analysis">Business and Market Analysis</h1>
 
 <h3 id="build-an-idea">Build an Idea</h3>
 
 <p>Despite what you might have heard, businesses aren’t made on first ideas. Before even registering a name, you should identify what services you will provide, who you will provide them to, and how you will provide the service. This can be anything - in fact, many successful businesses are things like car washes, food services, or cleaning services. These are also extremely good first businesses because of how low both their running cost and risk is. Restaurants can be difficult to profit from, are slightly riskier, and additional certification is required compared to the others, but they also provide a larger growth opportunity.</p>
 
 <p>Likewise, a law firm, consultancy agency, or property development business can be started, but the complexity of starting, maintaining and potentially selling a non-trivial business can become more difficult. Many types of business require certifications to be maintained or purchased, and will hold you to a standard that must be maintained. Not looking into this early on can result in legal fees later down the road, stress, or potentially even time in jail.</p>
+
+<h3 id="business-model">Business Model</h3>
+
+<p>The model for your business is crucially important to the decisions you take, and is one of the core strategies that directs where growth is made, what actions are taken, and even the business image.</p>
+
+<h4 id="business-to-business">Business to Business</h4>
+
+<p>In a B2B business model, a business sells its product or service to another business. Sometimes the buyer is the end user, but often the buyer resells to the consumer.</p>
+
+<p>B2B transactions generally have a longer sales cycle, but higher order value and more recurring purchases.</p>
+
+<h4 id="business-to-consumer">Business to Consumer</h4>
+
+<p>B2C businesses sell to their end-user. The B2C model is the most common business model, so there are many unique approaches under this umbrella.</p>
+
+<p>Anything you buy in an online store as a consumer — think wardrobe, household supplies, entertainment — is done as part of a B2C transaction.</p>
+
+<h4 id="consumer-to-business">Consumer to Business</h4>
+
+<p>You are providing a platform for consumers to sell goods and services to a business.</p>
+
+<h4 id="consumer-to-consumer">Consumer to Consumer</h4>
+
+<p>A C2C business — also called an online marketplace — connects consumers to exchange goods and services and typically make their money by charging transaction or listing fees. Ebay and Fiverr are good examples of this.</p>
+
+<h3 id="value-proposition">Value Proposition</h3>
+
+<p>How does  you plan to make money with your business?</p>
 
 <h3 id="analyse-the-target-market">Analyse the Target Market</h3>
 
@@ -55,10 +86,7 @@
 
 <h3 id="awareness">Awareness</h3>
 
-<ul>
-  <li>local scope</li>
-  <li>global scope</li>
-</ul>
+<p>Remaining aware of both local and global events can have a major impact in your business strategies. Many opportunities for growth will be presented on both stages, and by analysing them, you can reap the most rewards. There are many strategies for estimating the effects of strategic business decisions, but some of the most well known ones are PESTLE and SWOT. These techniques both aim to support the making of business decisions, although from different angles.</p>
 
 <h2 id="pestle">PESTLE</h2>
 
@@ -66,7 +94,7 @@
 
 <h3 id="political">Political</h3>
 
-<p>What is the current political climate? How will the desired action be interpreted against the backdrop of the global stage? Will they alienate a country, region, race or gender from buying our services?</p>
+<p>What is the current political climate? How will the desired action be interpreted against the backdrop of the global stage? Will they alienate a country, region, race or gender from buying your services?</p>
 
 <h3 id="economic">Economic</h3>
 
@@ -86,13 +114,6 @@
 <h3 id="weaknesses">Weaknesses</h3>
 <h3 id="opportunities">Opportunities</h3>
 <h3 id="threats">Threats</h3>
-
-<h2 id="business-model">Business Model</h2>
-
-<h3 id="business-to-business">Business to Business</h3>
-<h3 id="business-to-consumer">Business to Consumer</h3>
-<h3 id="consumer-to-business">Consumer to Business</h3>
-<h3 id="consumer-to-consumer">Consumer to Consumer</h3>
 
 <hr />
 
@@ -136,5 +157,6 @@
 
 <hr />
 
+</div>
 	</body>
 </html>
