--- a/notes/Learn Programming From Scratch.html
+++ b/notes/Learn Programming From Scratch.html
@@ -13,7 +13,8 @@
 	</head>
 
 	<body>
-		<p>Instead of assuming the user knows what language they want to use, I will instead provide a list of projects. These projects will have a difficulty rating and a clear end goal. This will let you choose whichever one suits your interests the most, and customise it for whatever you need.</p>
+		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
+<p>Instead of assuming the user knows what language they want to use, I will instead provide a list of projects. These projects will have a difficulty rating and a clear end goal. This will let you choose whichever one suits your interests the most, and customise it for whatever you need.</p>
 
 <hr />
 
@@ -120,5 +121,6 @@
 <p>Resource List:</p>
 
 
+</div>
 	</body>
 </html>
