--- a/pages/kind of evil/1.html
+++ b/pages/kind of evil/1.html
@@ -25,11 +25,11 @@
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">		
 			<h3 id="playing-with-fire"><strong>Playing with Fire</strong></h3>
 
-<p>Something in me had always loved the idea of fire. Maybe it was the warmth, or the chaos that seemed to dance unaffected by the outside world. Right now, I’m holding onto the only one we have, and leading the way even deeper into the cave system below our city. Recent reports of missing animals have us worried that some sort of creature has made this its new home - maybe a starving bear, or pack of wolves, so it’s my job to route them out. Even now, underneath so many layers of stone, I can feel the full moon hanging above us, churning the magic in my veins and bringing out the wilder side of me.</p>
+<p>Something in me had always loved the idea of fire. Maybe it was the warmth, or the chaos that seemed to dance unaffected by the outside world. Right now, I’m holding onto the only one we have, and leading the way into the cave system that snakes below our settlement. A pair of stone monoliths seem to guard the entrance, etched with words of a language none of us can read, cracked and chipped by aeons of weathering. Recent reports of missing livestock have us worried that some sort of creature has made this its new home - maybe a starving bear, or pack of wolves, so it’s my job to route them out. This winter has been a particularly harsh one, and many a creature is becoming increasingly desperate as the cold drags on. <strong>Even now, underneath so many layers of stone, I can feel the full moon hanging above us, churning the magic in my veins and bringing out the wilder side of me. [harsh and nonsensical transition]</strong></p>
 
-<p>As we move deeper into the caves, the musty air seems to cling to us, hardly moving as we pass through it, and the only sound that breaks the soft falling of feet is the skittering of soft claws on rock. Every so often, my torch flares up as it makes contact with a spiderweb, illuminating the ceiling for a brief second before shrinking back down to a low burn. These caves are well known around here, their endless depths having swallowed many an adventurer without a trace, and I can see why. The inspiration to explore the unexplored, and find the unexpected becomes stronger the deeper you reach. Almost as if there’s a magic lying over these caves.</p>
+<p>As we move deeper into the caves, the musty air seems to cling to us, hardly moving as we pass through it, and the only sound that breaks the soft falling of feet is the skittering of soft claws on rock. Every so often, my torch flares up as it makes contact with a spiderweb, illuminating the ceiling for a brief second before shrinking back down to a low burn. These caves are well known around here, their endless depths having swallowed many an adventurer without a trace, and I can see why. The inspiration to explore the unexplored and find the unexpected becomes stronger the deeper you reach. Almost as if there’s a magic lying over these caves.</p>
 
-<p>Hagen steps up beside me, muttering an invocation as he grabs my shoulder. Although nothing changes for me, I can almost feel as his mind escapes his body, expanding throughout the caves to choose the most likely path - and avoid danger.</p>
+<p>Hagen steps up beside me, muttering an invocation as he grabs my shoulder. Although nothing changes for me, I can almost feel as his mind escapes his body, expanding throughout the caves to choose the most likely path - and avoid danger. As the seconds drag on, only the occasional rise and fall of his chest indicate that he’s still alive.</p>
 
 <p><strong>He leads the way to the creature, avoiding dead ends, pitfalls, and other unnecessary dangers that caves might posess</strong></p>
 
@@ -54,6 +54,13 @@
 <p><strong>when i arrive, the king refuses to help, saying we brought it upon ourselves by using dark magic. He then tries to kill me because the only magic allowed is what he chooses. When i manage to escape, he sends men to my village, aiming to hunt me and any other magic users down.</strong></p>
 
 <p><strong>i run, escaping back home, where i tell them about what’s coming. We all decide to band together against a useless king, and tell other settlements near us what the king is doing, in the hope that they will join us.</strong></p>
+
+<p><strong>while fighting the kings men, i realise that despite all our magic, we cant win. so i secretly drink dead vampy blood and become one, just so i can fight better. so now i have to hide that im a vampy from everyone, whilst fighting for them in the nighttime, etc. i become some super rogue nighttime assassin guy and go ham on the army i guess?</strong></p>
+
+<p>the chapter where i become a vampy should be called getting burned</p>
+
+<p><strong>eventually they realise that im a vampire, idk what should happen yet tho</strong>
+<strong>either get outcast or they accept it as a necessary sacrifice</strong></p>
 
 
 		</div>
