--- a/pages/kind of evil/2.html
+++ b/pages/kind of evil/2.html
@@ -23,14 +23,15 @@
 		</div>
 		
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">		
-			<h3 id="sticks-and-stones"><strong>Sticks and Stones</strong></h3>
+			<h3 id="sticks-and-stones"><strong>Sticks And Stones</strong></h3>
 
-<p>Anders
-Brandt
-Erlande
-Hagen</p>
+<h3 id="crying-wolf"><strong>Crying Wolf</strong></h3>
 
-<p>The four of us all bled that night. For every wound we dealt, it seemed like we recieved two right back. It didn’t take long for the once sandy ground to become wet, and for the sharp taste of iron to permeate the air. The torch still burned, casting long shadows on the walls that seemed to dance along to our screams.</p>
+<h3 id="silver-lining"><strong>Silver Lining</strong></h3>
+
+<h3 id="greener-grass"><strong>Greener Grass</strong></h3>
+
+<h3 id="black-sheep"><strong>Black Sheep</strong></h3>
 
 		</div>
 		
