update plot for books, and add detail to notes

--- a/books/gory-glory.html
+++ b/books/gory-glory.html
@@ -18,7 +18,8 @@
 	
 		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
-		<p>Who needs a beating?</p>
+		<p>In the grim future where there is only war, history has perished and worlds are destroyed, who will survive?</p>
+
 		
 		</div>
 		
