--- a/pages/shellshock/1.html
+++ b/pages/shellshock/1.html
@@ -24,13 +24,15 @@
 		
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">		
 			<h3 id="blackwood"><strong>Blackwood</strong></h3>
+
 <p>It’s winter, and a frost has crept up over the leaves that I stand on - even deep within the forest, the bitter cold gives no ground. The occasional web glistens in the shadows, magnified to proportions that would dwarf the average man. This is Blackwood, a place abandoned by settlers, villagers, hunters and just about everyone else who exists. Except us.</p>
 
-<p>As we move forward, getting ever closer to our goal, small clouds of fog rise up with our breath, before crystallising and hanging in the air like smoke. The air here is heavy - both figuratively and literally, and our lungs strain against the environment to keep us breathing.</p>
+<p>As we move forward, getting ever closer to our goal, small clouds of fog rise up with our breath, before crystallising and hanging in the air like smoke. The air here is heavy - both figuratively and literally, and our lungs strain against the environment to keep us breathing. Despite the chill, beads of sweat drip down our skin, soaking our clothes until they cling to our bodies like another layer of skin.</p>
 
 <p>Each one of us is armed, although not with steel - cumbersome and noisy are two things that even a starving hunter wouldn’t be. Three of us have short bows, sturdy and powerful enough to pierce through the skin of most creatures. We all have knives. I reach for my satchel, resting my hand on the outside wrapping, reassuring myself that the contents are still in one piece. Then I heard it. The slight rustle of fabric in an otherwise silent forest. Not from behind me, where the rest of my team is, but from ahead. Crouching down, I let my hand rest on the bound handle of my knife. My fingers twitch. <em>Breathe.</em> The cold fog rises once again in front of my face, and as I realise my mistake, a crushing pain pushes me into the ground, my eyes covered by the dense matted fur of whatever creature ambushed me. My arm is pinned to the ground, and I can feel my spine curve around the bow on my back. The dagger is still in my free hand, and I unsheathe, swinging upwards until my knife jerks to a halt, too blunt to slice through the fur of the creature.</p>
 
 <p>Only now do the arrows come flying over me, screaming through the air before they thud into the creature, making it recoil away in pain.</p>
+
 
 		</div>
 		
