--- a/notes/A Holistic Overview Of Starting A Business.html
+++ b/notes/A Holistic Overview Of Starting A Business.html
@@ -5,8 +5,11 @@
 		<title> A holistic overview of starting a business </title>
 		
 		<!-- styles -->				
-		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
-		<link rel="stylesheet" href="/assets/css/common.css">		
+		<link rel="stylesheet" href="/assets/themes/dark.css" id = "theme">
+		<link rel="stylesheet" href="/assets/css/common.css">	
+
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+		
 		<!-- scripts -->
 		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 		
