--- a/pages/kind of evil/1.html
+++ b/pages/kind of evil/1.html
@@ -37,9 +37,9 @@
 
 <p>Peering into the darkness always feels unsettling, but once you see the eyes staring back at you, it graduates to fear. Pausing, I let my torch burn dimmer, watching the barely visible shadow in the cave. It still hasn’t made a sound, and my neck itches enough that I whisper out for my team. You can’t take your eyes off of things like this - if it turns out to be a faefolk, or a cherubim, I would be dead before I looked back. Finally hearing a response from my team, I step forward, each second stretching out into minutes as I wait for the creature to act.</p>
 
-<p>Surprisingly, it spoke. With each syllable, the earth shuddered, as if even the ground was repulsed by this creatures very existence. Still concealed by the shadows, its eyes glint against my torchlight, dark beacons that seem to hold the truth to every question in the world. “Come, Child”. The voice grew, an irristible urge that began to lead me toward the creature, even as I tried to resist. My feet quivered, grinding against the soft layer of sand that had collected in this particular cavern. Behind me, I can hear the rest of my team step forward, their eyes focussed intently on the creature before us.</p>
+<p>Surprisingly, it spoke. With each syllable, the earth shuddered, as if even the ground was repulsed by this creatures very existence. Still concealed by the shadows, its eyes glint against my torchlight, dark beacons that seem to hold the truth to every question in the world. “Come, Child”. The voice grew, an irristible urge that began to lead me forward even as I tried to resist. My feet quivered, grinding against the soft layer of sand that had collected in this particular cavern. Behind me, I can hear the rest of my team step forward, their eyes focussed intently on the creature before us, their own minds sinking into a fog as deep as the one I find myself in.</p>
 
-<p>The pressure grows, and with the last of my clouded thoughts, I <em>push</em> magic into the fire, desperately feeding the flame until it ignites even the hair on my arms, scorching my face and drying my eyes all at once. As the walls light up, I see the creature in its’ entirety for the first time. The first thing I see is a snarling face, sharp teeth gleaming like polished marble in the blood red recesses of its’ mouth. Dark eyes, piercingly focussed on each of us. A bare torso, lean and muscular, framed by the batlike wings that extend from its’ back, unfurling until their tips scrape against the edges of the cavern.</p>
+<p>The pressure grows, and with the last of my clouded thoughts, I <em>push</em> magic into the fire, desperately feeding the flame until it ignites even the hair on my arms, scorching my face and drying my eyes all at once. As the walls light up, I see the creature in its’ entirety for the first time. The first thing I see is a snarling face, sharp teeth gleaming like polished marble in the blood red recess of its’ mouth. Dark eyes, piercingly focussed on each of us. A bare torso, lean and muscular, framed by the batlike wings that extend from its’ back, unfurling until their tips scrape against the edges of the cavern.</p>
 
 <p>Snapped out of our reverie, we step back, feet scraping against the ground that suddenly doesn’t feel as firm as it should. It’s not enough. The creature snarls, pouncing on those closest to it in a flurry of claw and fang. Clearly visible in the torchlight, dark veins seeming to shift under its’ alabaster skin as it moves. Time slows, and I feel my blade rising from my sheath, countering the claw strike that was aimed at my chest. Fumbling to grab it properly, I duck, swinging the blade horizontally to score a deep wound along its’ ribcage. A dark ichor, almost tarlike, slowly seeps out of the wound and onto the ground.</p>
 
@@ -47,15 +47,24 @@
 
 <p><strong>The fight isn’t very long - we came prepared, and although the creature is deadly, it’s clearly already starving and weakened. We leave the body where it lies for now - if we need, someone can come pick it up in the morning to burn.</strong></p>
 
-<p><strong>returning home, we’re met with anxious friends and family, eager to know what we found, and why we look so beaten up. Some jokes are made about not bringing back bear meat to eat.</strong></p>
+<p><strong>returning home, we’re met with anxious friends and family, eager to know what we found, and why we look so beaten up</strong></p>
 
-<p><strong>we decide to send a message to the king, trying to find out what he can do about all these creatures that have started to infest our land. I decide to go, because I have magic and am most suited to the task.</strong></p>
+<p><strong>a meeting is held the next day with the ones of us who are healthy enough to stand and move around. so i tell the council/city lord what i found.</strong></p>
 
-<p><strong>when i arrive, the king refuses to help, saying we brought it upon ourselves by using dark magic. He then tries to kill me because the only magic allowed is what he chooses. When i manage to escape, he sends men to my village, aiming to hunt me and any other magic users down.</strong></p>
+<p><strong>council/lord decides to send me to tell the king and request greater aid to defeat this infestation.</strong></p>
 
-<p><strong>i run, escaping back home, where i tell them about what’s coming. We all decide to band together against a useless king, and tell other settlements near us what the king is doing, in the hope that they will join us.</strong></p>
+<p><strong>I travel all the way from the settlement to the center of the territory, to the largest city, and tell their city council what we found and how we killed it. they escalate it to the king, because vampires were supposed to have been eradicated by the king when he took the throne.</strong></p>
 
-<p><strong>while fighting the kings men, i realise that despite all our magic, we cant win. so i secretly drink dead vampy blood and become one, just so i can fight better. so now i have to hide that im a vampy from everyone, whilst fighting for them in the nighttime, etc. i become some super rogue nighttime assassin guy and go ham on the army i guess?</strong></p>
+<p><strong>it turns out that the king had made a pact with vampires to let them feed on his outer territories in exchange for stopping the war that was going on between humans and vampires. He thought he could get away with it because we’re a small place and he thought nobody would notice/ have the power to challenge his decision or bring it to light. It’s surprising because he seemed to be a good king otherwise, and most of the kingdom has prospered under his rule.</strong></p>
+
+<p><strong>when i arrive, the king refuses to help, using some weird logic to justify his decision to the fanatic diehard believers. He then tries to kill me because i now know about his misdeeds, and he needs to remain as good looking and perfect as possible. When i manage to escape, he sends men to my village, aiming to hunt down me and anyone else who knows, and kill them.</strong></p>
+
+<p><strong>i run, escaping back home, where i tell them about what’s coming. We all decide to band together against a useless king, and tell other settlements near us what the king is doing, in the hope that they will join
+us.</strong></p>
+
+<p><strong>It turns out that a lot of the other fringe settlements have already been entirely destroyed/eaten by the vampires, so everyone who is left is very convinced to start fighting.</strong></p>
+
+<p><strong>while fighting the kings men, i realise that we cant win. so i secretly go find and dig up the dead vampy, drink dead vampy blood and become one, just so i can fight better. so now i have to hide that im a vampy from everyone, whilst fighting for them in the nighttime, etc. i become some super rogue nighttime assassin guy and go ham on the army i guess?</strong></p>
 
 <p>the chapter where i become a vampy should be called getting burned</p>
 
