--- a/settings.html
+++ b/settings.html
@@ -5,8 +5,11 @@
 		<title>  </title>
 		
 		<!-- styles -->				
-		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
-		<link rel="stylesheet" href="/assets/css/common.css">		
+		<link rel="stylesheet" href="/assets/themes/dark.css" id = "theme">
+		<link rel="stylesheet" href="/assets/css/common.css">	
+
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+		
 		<!-- scripts -->
 		<script src="/assets/scripts/theme.js" onload = "setTheme(getTheme());"></script>
 		
@@ -18,6 +21,11 @@
 	.theme-select:hover { box-shadow: 0px 0px 8px currentColor; cursor:pointer; }
 
 </style>
+
+<div style = "width:calc(100vw - 6em); margin-left:3em;">
+	<h3><a href = "/"><i class = "icon-home"></i>Home</a></h3>
+	<hr>
+</div>
 
 <div style = "width:50vw; margin-left:3em;">
 	<h1>Settings</h1>
