flesh out plot for books. update themes.

--- a/books/shellshock.html
+++ b/books/shellshock.html
@@ -19,6 +19,12 @@
 		<!-- book preface -->
 		<div style = "width:80vw; margin:auto;">			
 		<p>The war has been raging for years now. Each of our countries in a race to find the next weapon, and expose their enemies’ next weakness. With no end in sight, and soldiers falling like flies, I’m conscripted to fight at Glintrock, defending it against the creatures that aim to enslave us. With nothing but my old hunting gear, will I be able to survive the ordeal, or become food for the creatures of the dark?</p>
+
+<p><strong>make my way to glintrock</strong>
+<strong>meet people, train and do some missions there.</strong>
+<strong>a spy has infiltrated the fort, and opens the doors at midnight, letting in a bunch of enemies that we have to fight</strong>
+<strong>find the spy, and try convince people it wasnt you, the new guy!</strong></p>
+
 		
 		</div>
 		
