--- a/notes/A Holistic Overview Of Starting A Business.html
+++ b/notes/A Holistic Overview Of Starting A Business.html
@@ -87,6 +87,45 @@
 
 <p>SEO also falls under this category. Regardless of your business type, having a strong online presence is essential to succeed in the current day and age. Around 10% of people will read page 2 of their search results, and the higher up on page 1, the more clicks you’ll get. Being first returns between 20% - 30% of all clicks, so it’s important.</p>
 
+<h2 id="catwoe">CATWOE</h2>
+<p>CATWOE is a technique that provides a framework for defining and analysing business stakeholder perspectives, in order to get a much clearer understanding of the system requirements. CATWOE falls under the umbrella of soft systems methodologies, and is an essential element to providing a satisfying solution. The mnemonic stands for Customer, Actor, Transformation, Worldview, Owner, and Environment</p>
+
+<h3 id="customer">Customer</h3>
+
+<p>Who does the stakeholder believe their customers are? Each stakeholder might hold different views, and each should be captured here.</p>
+
+<h3 id="actor">Actor</h3>
+
+<p>These are all the stakeholders that are involved in carrying out the transformation. In this case, Actor means a different thing to use-case actors.</p>
+
+<h3 id="transformation">Transformation</h3>
+
+<p>The main business activity, and what allows a profit to be made.</p>
+
+<h3 id="worldview">Worldview</h3>
+
+<p>A summary of each stakeholders beliefs about the organisation or business sytem, why it exists and what it should be doing.</p>
+
+<h3 id="owner">Owner</h3>
+
+<p>Who owns the business system? Who holds the most power in this area of the business?</p>
+
+<h3 id="environment">Environment</h3>
+
+<p>The constraints imposed on the business by their environment. Rules and regulations that they have to follow, etc.</p>
+
+<h2 id="moscow">MoSCoW</h2>
+
+<p>Yes, you read that right. The acronym is a method of prioritising requirements in order to complete the most essential ones first, and leave the less important ones for later. (The ‘O’s were added to make it an acronym but mean nothing).</p>
+
+<h3 id="must-have">Must Have</h3>
+
+<h3 id="should-have">Should Have</h3>
+
+<h3 id="could-have">Could Have</h3>
+
+<h3 id="will-not-have">Will not Have</h3>
+
 <h3 id="awareness">Awareness</h3>
 
 <p>Remaining aware of both local and global events can have a major impact in your business strategies. Many opportunities for growth will be presented on both stages, and by analysing them, you can reap the most rewards. There are many strategies for estimating the effects of strategic business decisions, but some of the most well known ones are PESTLE and SWOT. These techniques both aim to support the making of business decisions, although from different angles.</p>
