--- a/pages/kind of evil/1.html
+++ b/pages/kind of evil/1.html
@@ -51,11 +51,13 @@
 
 <p><strong>a meeting is held the next day with the ones of us who are healthy enough to stand and move around. so i tell the council/city lord what i found.</strong></p>
 
+<p><strong>they regognise it as a vampire, something that was supposed to have been hunted to extinction years ago.</strong></p>
+
 <p><strong>council/lord decides to send me to tell the king and request greater aid to defeat this infestation.</strong></p>
 
 <p><strong>I travel all the way from the settlement to the center of the territory, to the largest city, and tell their city council what we found and how we killed it. they escalate it to the king, because vampires were supposed to have been eradicated by the king when he took the throne.</strong></p>
 
-<p><strong>it turns out that the king had made a pact with vampires to let them feed on his outer territories in exchange for stopping the war that was going on between humans and vampires. He thought he could get away with it because we’re a small place and he thought nobody would notice/ have the power to challenge his decision or bring it to light. It’s surprising because he seemed to be a good king otherwise, and most of the kingdom has prospered under his rule.</strong></p>
+<p><strong>it turns out that the king had made a pact with vampires to let them feed on his outer territories in exchange for stopping the war that was going on between humans and vampires. He thought he could get away with it because we’re a small place and he thought nobody would notice/ have the power to challenge his decision or bring it to light. It’s surprising because he seemed to be a good king otherwise, and most of the kingdom has prospered under his rule. This should get slowly found out while digging through archives, listening to dying vampires as they gloat, etc.</strong></p>
 
 <p><strong>when i arrive, the king refuses to help, using some weird logic to justify his decision to the fanatic diehard believers. He then tries to kill me because i now know about his misdeeds, and he needs to remain as good looking and perfect as possible. When i manage to escape, he sends men to my village, aiming to hunt down me and anyone else who knows, and kill them.</strong></p>
 
